--- a/upplication-details.html
+++ b/upplication-details.html
@@ -361,25 +361,37 @@
         let fee = 0.00;
         let savingamount = 0.00;
         
-        if (lims >= 15000) {
+if (lims >= 55000) {
             fee = 92.00;
-            savingamount = 325.00;
+            savingamount = 2050.00;
             //lims = lims - fee;
-        } else  if (lims >= 10000) {
+        } else  if (lims >= 41000) {
             fee = 81.00;
-            savingamount = 275.00;
+            savingamount = 1475.00;
             //lims = lims - fee;
-        } else if (lims >= 7000) {
+        } else  if (lims >= 29000) {
+            fee = 81.00;
+            savingamount = 945.00;
+            //lims = lims - fee;        
+        }else if (lims >= 17000) {
+            fee = 92.00;
+            savingamount = 645.00;
+            //lims = lims - fee;
+        } else  if (lims >= 12000) {
+            fee = 81.00;
+            savingamount = 370.00;
+            //lims = lims - fee;
+        } else if (lims >= 8000) {
             fee = 68.00;
-            savingamount = 255.00;
+            savingamount = 300.00;
             //lims = lims - fee;
         } else if (lims >= 5000) {
             fee = 57.00;
-            savingamount = 165.00;
+            savingamount = 205.00;
             //lims = lims - fee;
         } else if (lims >= 0) {
             fee = 39.00;
-            savingamount = 100.00;
+            savingamount = 150.00;
             //lims = lims - fee;
         }
 
